--- a/src/pages/productList/productList.scss
+++ b/src/pages/productList/productList.scss
@@ -1,12 +1,11 @@
-.userList{
+.productList{
     flex: 4;
-    // padding: 20px;
 
-    .userListUser{
+    .productListProduct{
         display: flex;
         align-items: center;
 
-        .userListImg{
+        .productListImg{
             width: 32px;
             height: 32px;
             border-radius: 50%;
@@ -15,7 +14,7 @@
         }
     }
 
-    .userListEdit{
+    .productListEdit{
         border: none;
         border-radius: 10px;
         padding: 5px 10px;
@@ -25,7 +24,7 @@
         margin-right: 10px;
     }
 
-    .userListDelete{
+    .productListDelete{
         color: red;
         cursor: pointer;
     }
